# code-search-engine

./: .gitignore  BENCHMARK_REPORT.md  Makefile  README.md  ROADMAP.md  demo.py  evaluate.py  evaluate_finetuning.py  evaluate_fn_names.py  fine_tune.py  frontend.py  index_cosqa_full.py  main_agent.py  pyproject.toml  report.ipynb  requirements.txt
.github/workflows/: ci.yml  lint.yml  tests.yml
agent/: core.py  llm.py
apps/: cli.py  streamlit_app.py
config/: benchmark_config.yaml  llm_config.yaml  main_config.yaml
data/eval/: gold_qa.yaml
notebooks/: benchmark_results.ipynb
plots/: benchmark_results.py  plot_utils.py  report.py
results/: 20260625-1903_benchmark.csv  20260625-1903_benchmark_full.csv  20260629-1801_benchmark.csv  20260629-1801_benchmark_full.csv  evaluation.csv  evaluation_fn_names.csv  generation_eval.csv  generation_eval_full.csv  losses.csv  losses_fn_names.csv
sample_code/: app.js  user.py  utils.py
scripts/: demo.py  demo_tool_calling.py  demo_tool_loop.py  demo_tools.py  evaluate_finetuning.py  evaluate_fn_names.py  fine_tune.py  index_cosqa_full.py  index_self_repo.py  run_benchmark.py  run_generation_eval.py
search_engine/: engine.py  evaluation.py  utils.py
src/agent/: core.py
src/cse/agent/: core.py  llm.py  presenter.py  schema.py  setup.py  tools.py
src/cse/eval/: harness.py  judge.py  schema.py
src/cse/search_engine/: engine.py  evaluation.py  utils.py
src/search_engine/: evaluation.py
tests/: test_agent_payload_keys.py  test_engine_indexing.py  test_engine_search.py  test_evaluation_metrics.py  test_harness.py  test_judge.py  test_llm.py  test_presenter.py  test_resolve_device.py  test_schema.py  test_setup.py  test_tool_calling_agent.py  test_tools.py
