[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cse"
version = "0.1.0"
description = "A local RAG agent for code search"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "torch==2.6.0",
    "langchain==1.0.4",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.0.1",
    "langchain-ollama==1.0.0",
    "sentence-transformers==5.1.2",
    "datasets==4.4.1",
    "qdrant-client==1.15.1",
    "accelerate==1.11.0",
    "joblib==1.5.2",
    "tabulate==0.9.0",
    "streamlit==1.51.0",
    "mlflow==3.6.0",
    "omegaconf==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ipykernel==7.1.0",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]